@@ -90,7 +90,6 @@ New features added
   - The default value for ``htmlhelp_basename`` is now the project
     title, cleaned up as a filename.
 
-
   - The new ``modindex_common_prefix`` config value can be used to
     ignore certain package names for module index sorting.
 
@@ -98,6 +97,11 @@ New features added
     the docutils config value of the same name and removes the
     space before a footnote reference that is necessary for reST
     to recognize the reference.
+
+  - The new ``latex_additional_files`` config value can be used to
+    copy files (that Sphinx doesn't copy automatically, e.g. if they
+    are referenced in custom LaTeX added in ``latex_elements``) to
+    the build directory.
 
 * Builders:
 
